# Map-Reduce-Lite

./: .gitignore  Cargo.toml  README.md  build.rs  run.sh
proto/: mapreduce.proto
src/: lib.rs  utils.rs
src/Encode/: encode_decode.rs  mod.rs
src/S3/: docker.txt  minio.rs
src/app/: mrl-coordinator.rs  mrl-ctl.rs  mrl-worker.rs  standalone.rs
src/cmd/: coordinator.rs  ctl.rs  mod.rs  worker.rs
src/codec/: mod.rs
src/standalone/: engine.rs  mod.rs
src/workload/: grep.rs  matrix_mult.rs  mod.rs  vertex_degree.rs  wc.rs
